--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Kyle Vaughn <kcvaughn@umich.edu>"]
 version = "0.1.0"
 
 [deps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
