--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Kyle Vaughn <kcvaughn@umich.edu>"]
 version = "0.1.0"
 
 [deps]
+Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
