Added thrust, but lacking cuda

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,8 +4,11 @@ add_library(um2 um2c.cpp ${HEADERS})
 
 target_include_directories(um2 PUBLIC ../include)
 
-## This depends on (header only) boost
-#target_link_libraries(modern_library PRIVATE Boost::boost)
+set(Thrust_DIR "${CMAKE_CURRENT_LIST_DIR}/../tpls/thrust/thrust/cmake")
+message(STATUS "Thrust_DIR: ${Thrust_DIR}")
+find_package(Thrust REQUIRED CONFIG)
+thrust_create_target(Thrust)
+target_link_libraries(um2 PRIVATE Thrust)
 
 target_compile_features(um2 PUBLIC cxx_std_23)
 
