--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = tpls/thrust
 	url = https://github.com/NVIDIA/thrust.git
 	branch = 2.1.x
+[submodule "tpls/googletest"]
+	path = tpls/googletest
+	url = https://github.com/google/googletest.git
