--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "tpls/googletest"]
 	path = tpls/googletest
 	url = https://github.com/google/googletest.git
+[submodule "tpls/spdlog"]
+	path = tpls/spdlog
+	url = https://github.com/gabime/spdlog.git
+	branch = v1.x
