--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -5,17 +5,17 @@
 
 // CUDA
 #cmakedefine01 UM2_ENABLE_CUDA
-//#if UM2_ENABLE_CUDA
-//#  define UM2_HOST    __host__    
-//#  define UM2_DEVICE  __device__    
-//#  define UM2_HOSTDEV __host__ __device__    
-//#  define UM2_GLOBAL  __global__    
-//#else    
+#if UM2_ENABLE_CUDA
+#  define UM2_HOST    __host__    
+#  define UM2_DEVICE  __device__    
+#  define UM2_HOSTDEV __host__ __device__    
+#  define UM2_GLOBAL  __global__    
+#else    
 #  define UM2_HOST    
 #  define UM2_DEVICE    
 #  define UM2_HOSTDEV    
 #  define UM2_GLOBAL    
-//#endif
+#endif
 
 // spdlog
 #define SPDLOG_ACTIVE_LEVEL @UM2_SPDLOG_LEVEL@
