CUDA off by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(
 
 ## User options ###############################################################
 ###############################################################################
-option(UM2_ENABLE_CUDA      "Enable CUDA"       ON)
+option(UM2_ENABLE_CUDA      "Enable CUDA"       OFF)
 option(UM2_ENABLE_OPENMP    "Enable OpenMP"     ON)
 option(UM2_ENABLE_TESTS     "Enable tests"      ON)
 option(UM2_ENABLE_FASTMATH  "Enable fast math"  ON)
