--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 
 # Test the framework itself
 add_um2_test(test_framework test_framework.cpp)
+add_um2_test(test_vector ./common/vector.cpp)
