WIP: String and Vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,6 @@ option(UM2_ENABLE_OPENMP    "Enable OpenMP"     ON)
 option(UM2_ENABLE_TESTS     "Enable tests"      ON)
 option(UM2_ENABLE_FASTMATH  "Enable fast math"  ON)
 
-# generate compile_commands.json
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 ## Advanced options ###########################################################
 ###############################################################################
 option(UM2_ENABLE_INT64 "Enable 64-bit integer types" OFF) # For large meshes
@@ -39,6 +36,7 @@ option(UM2_ENABLE_CPPCHECK      "Enable cppcheck"                 ${UM2_DEV_MODE
 set(UM2_HEADERS
     "include/um2/common/config.hpp"
     "include/um2/common/vector.hpp"
+    "include/um2/common/string.hpp"
     "include/um2c.h")    
     
 # Sources
