--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_test.cmake)
 # Test the framework itself
 add_um2_test(test_framework test_framework.cpp)
 add_um2_test(test_vector ./common/vector.cpp)
+add_um2_test(test_string ./common/string.cpp)
